--- a/src/components/Yo.css
+++ b/src/components/Yo.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 2px solid red;
 }
 
 .yo-content {
@@ -89,4 +90,13 @@
         width: 200px;
         height: 200px;
     }
+}
+
+.profile-photo {
+    border: 3px solid blue;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    background-color: #f0f0f0; 
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
 }
