--- a/src/components/Yo.css
+++ b/src/components/Yo.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid red;
+    border: 2px solid rgb(255, 255, 255);
 }
 
 .yo-content {
@@ -85,18 +85,13 @@
         gap: 30px;
         text-align: center;
     }
-    
-    .placeholder-image {
-        width: 200px;
-        height: 200px;
-    }
 }
 
 .profile-photo {
-    border: 3px solid blue;
+    
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     background-color: #f0f0f0; 
-    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
 }
